[gd_scene load_steps=10 format=3 uid="uid://utxwjtwejbj"]

[ext_resource type="Script" path="res://scens/floors/weak_floor_area.gd" id="1_lqdsr"]
[ext_resource type="Texture2D" uid="uid://b8iswu1l0ow3x" path="res://sprites/env1/hole_0_big.png" id="2_qwiwp"]
[ext_resource type="Texture2D" uid="uid://us8sygfofeqm" path="res://sprites/env1/hole_0_front_big.png" id="3_pd1oe"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2hdso"]
atlas = ExtResource("2_qwiwp")
region = Rect2(0, 0, 206, 206)

[sub_resource type="SpriteFrames" id="SpriteFrames_twh27"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hdso")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gji5p"]
size = Vector2(40, 38)

[sub_resource type="Animation" id="Animation_5rn0s"]
resource_name = "fall"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlockHandler:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 45)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BlockHandler:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, -1]
}

[sub_resource type="Animation" id="Animation_x5n36"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlockHandler:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BlockHandler:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wvqfi"]
_data = {
"RESET": SubResource("Animation_x5n36"),
"fall": SubResource("Animation_5rn0s")
}

[node name="WeakFloorArea2D" type="Area2D"]
z_index = -1
y_sort_enabled = true
script = ExtResource("1_lqdsr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(7.62939e-06, 0)
scale = Vector2(0.508, 0.5)
sprite_frames = SubResource("SpriteFrames_twh27")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gji5p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wvqfi")
}
speed_scale = 8.0

[node name="BlockHandler" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1.13249e-06, 45.5)
scale = Vector2(0.504854, 0.541667)
texture = ExtResource("3_pd1oe")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
